--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "agent-framework>=1.0.0b260107",
     "azure-eventhub>=5.15.1",
     "azure-eventhub-checkpointstoreblob>=1.2.0",
     "azure-eventhub-checkpointstoreblob-aio>=1.2.0",
