--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "pytest>=8.0.0",
+    "azure-ai-evaluation>=1.14.0",
 ]
 
 [tool.pytest.ini_options]
