--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -26,6 +30,13 @@ jobs:
       
       - name: Run unit tests (skip integration tests requiring CosmosDB)
         run: uv run pytest tests/ -v --ignore=tests/test_preference_signals_eval.py --ignore=tests/test_graph_tool.py || echo "No unit tests found"
+      
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       
       - name: Run AI evaluation tests
         env:
